--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <p> I really hope this works </p>
    <?php
-$servername = "localhost";
+$servername = "lebraun.local";
 $username = "username";
 $password = "password";
 
