--- a/index.html
+++ b/index.html
@@ -1,26 +1,19 @@
 <html>
 <p> I really hope this works </p>
+  
    <?php
-$servername = "lebraun.local";
+$servername = "localhost";
 $username = "username";
 $password = "password";
 
 // Create connection
 $conn = new mysqli($servername, $username, $password);
+
 // Check connection
 if ($conn->connect_error) {
     die("Connection failed: " . $conn->connect_error);
 }
-
-// Create database
-$sql = "CREATE DATABASE myDB";
-if ($conn->query($sql) === TRUE) {
-    echo "Database created successfully";
-} else {
-    echo "Error creating database: " . $conn->error;
-}
-
-$conn->close();
+echo "Connected successfully";
 ?> 
 
 </html>
